--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -54,20 +54,34 @@
                     android:layout_marginTop="65dp"
                     android:gravity="center_horizontal"
                     >
-                    <TextView
-                        android:id="@+id/tvUserName"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hassan Raza"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        >
+                        <TextView
+                            android:id="@+id/tvUserName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="-----------"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                        <ImageView
+                            android:id="@+id/editName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginTop="1dp"
+                            android:src="@drawable/edit_icon"/>
+
+                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/tvCNIC"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="38403-3093530-7"
+                        android:text="-------------"
                         android:layout_marginBottom="10dp"
                         android:textColor="@color/textGrey"
                         android:textSize="15sp"
