--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -138,12 +138,13 @@
                                         android:id="@+id/tvFatherName"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="Muhammad Ashraf"
+                                        android:text="-------"
                                         android:textColor="@color/black"
                                         />
                                 </LinearLayout>
 
                                 <LinearLayout
+                                    android:id="@+id/addressLay"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
@@ -177,6 +178,7 @@
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/layPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:cardBackgroundColor="@color/white"
@@ -345,6 +347,7 @@
                             <!--                                android:tint="@color/primary" />-->
 
                             <LinearLayout
+                                android:id="@+id/layNominee"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="15dp"
