--- a/app/src/main/res/layout/update_phone_number.xml
+++ b/app/src/main/res/layout/update_phone_number.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="340dp"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
@@ -16,9 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/secondary_m"
-
             android:orientation="vertical">
-
             <View
                 android:layout_width="100dp"
                 android:layout_height="2dp"
@@ -55,6 +53,7 @@
                 android:hint="-------"
                 android:layout_marginTop="10dp"
                 android:paddingLeft="20dp"
+                android:textSize="14dp"
                 android:inputType="number"
                 android:background="@drawable/bg_edittext"
                 android:layout_marginHorizontal="20dp"/>
