--- a/app/src/main/res/layout/dialog_update_name.xml
+++ b/app/src/main/res/layout/dialog_update_name.xml
@@ -78,6 +78,22 @@
                 android:background="@drawable/bg_edittext"
                 android:hint="-------"
                 android:paddingLeft="20dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/lightGray"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="9dp"
+                android:text="Address"/>
+            <EditText
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/bg_edittext"
+                android:hint="-------"
+                android:paddingLeft="20dp" />
 
             <Button
                 android:id="@+id/updateName"
