--- a/app/src/main/res/layout/activity_investment.xml
+++ b/app/src/main/res/layout/activity_investment.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/refreshLayout"
+    tools:context=".ui.ActivityInvestment"
+
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#f1f7f7"
     android:orientation="vertical"
-    tools:context=".ui.ActivityInvestment">
-
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        >
         <ImageView
             android:id="@+id/imgBack"
             android:layout_width="35dp"
@@ -41,6 +52,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:alpha="0.5"
+            android:text="swipe down to refresh"
+            android:textSize="14dp" />
+
         <ImageView
             android:layout_width="60dp"
             android:layout_height="50dp"
@@ -67,10 +86,14 @@
                 android:orientation="vertical">
 
 
+
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginLeft="10dp"
                     android:orientation="horizontal">
 
@@ -143,3 +166,4 @@
 
 
 </LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
