--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -58,6 +58,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         >
+
+                        <EditText
+                            android:id="@+id/base"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/tvUserName"
                             android:layout_width="wrap_content"
