--- a/app/src/main/res/layout/activity_new_withdraw_req.xml
+++ b/app/src/main/res/layout/activity_new_withdraw_req.xml
@@ -143,7 +143,7 @@
                    android:id="@+id/tvPhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="+923006023648"
+                    android:text="--"
                     android:layout_alignParentLeft="true"
                     android:layout_margin="15dp"
                     android:textColor="@color/SecondaryVariant"
