--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -215,11 +215,13 @@
                                 android:layout_height="match_parent"
                                 android:gravity="right|center_vertical"
                                 >
-                                <ImageView
+                                <TextView
                                     android:id="@+id/img1"
-                                    android:layout_width="50dp"
-                                    android:layout_height="match_parent"
-                                    android:background="@drawable/visa_"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="--"
+                                    android:textColor="@color/white"
+                                    android:layout_marginEnd="5dp"
                                     />
 
                             </LinearLayout>
