margin set , toast set, signup functonality remove

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,11 +72,11 @@
                 android:textStyle="bold"
                 android:text="Login" />
 
-            <RelativeLayout
+           <!-- <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+              &lt;!&ndash;  <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -96,12 +96,12 @@
                         android:padding="10dp"
                         android:text="@string/signUp"
                         android:textColor="@color/black" />
-                </LinearLayout>
+                </LinearLayout>&ndash;&gt;
 
 
 
             </RelativeLayout>
-
+-->
 
         </LinearLayout>
 
